# Stratos

./: .dockerignore  .env.example  .gitignore  .pyre_configuration  CHANGELOG.md  COMPLETE_API_SETUP_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE  Makefile  PRD.MD  README.md  TODO.md  UPSTOX_INTEGRATION_SUMMARY.md  UPSTOX_SETUP_GUIDE.md  docker-compose.yml  pyrefly.toml  stratos_homepage_concept.html  stratos_ux_flows_complete.html
data-fabric/: alembic.ini  pyproject.toml  pyrefly.toml
data-fabric/migrations/: env.py
data-fabric/migrations/versions/: 001_initial.py
data-fabric/src/data_fabric/: __init__.py  config.py
data-fabric/src/data_fabric/adapters/: __init__.py
data-fabric/src/data_fabric/adapters/cache/: __init__.py  redis_cache.py
data-fabric/src/data_fabric/adapters/database/: __init__.py  engine.py  models.py  postgres.py
data-fabric/src/data_fabric/adapters/document_store/: __init__.py  mongo.py
data-fabric/src/data_fabric/adapters/events/: __init__.py  kafka_publisher.py
data-fabric/src/data_fabric/adapters/object_store/: __init__.py  minio.py
data-fabric/src/data_fabric/adapters/providers/: __init__.py  market_intel.py  sec_edgar.py
data-fabric/src/data_fabric/adapters/queue_consumers/: __init__.py  kafka_consumer.py
data-fabric/src/data_fabric/adapters/scheduler/: __init__.py  tracked_refresh_scheduler.py
data-fabric/src/data_fabric/adapters/sources/: __init__.py  oanda.py  world_bank.py
data-fabric/src/data_fabric/api/: app.py  deps.py  research_routes.py  routes.py  v2_routes.py
data-fabric/src/data_fabric/application/: __init__.py  common.py  legacy.py
data-fabric/src/data_fabric/application/features/: __init__.py
data-fabric/src/data_fabric/application/ingestion/: __init__.py
data-fabric/src/data_fabric/application/insights/: __init__.py
data-fabric/src/data_fabric/application/query/: __init__.py
data-fabric/src/data_fabric/domain/: errors.py
data-fabric/src/data_fabric/domain/entities/: __init__.py
data-fabric/src/data_fabric/domain/services/: validator.py
data-fabric/src/data_fabric/domain/value_objects/: __init__.py
data-fabric/src/data_fabric/ports/inbound/: __init__.py
data-fabric/src/data_fabric/ports/outbound/: __init__.py
data-fabric/src/data_fabric/workers/: __init__.py  feature_builder.py  insight_builder.py  provider_ingest.py  refresh_router.py  runtime.py  scheduler.py
data-fabric/tests/: test_application.py  test_domain.py
data-fabric/tests/unit/: test_bi_temporal.py
engines/rust/: Cargo.toml
engines/rust/crates/core/: Cargo.toml
engines/rust/crates/core/src/: error.rs  lib.rs  math.rs  traits.rs  types.rs
engines/rust/crates/dcf/: Cargo.toml
engines/rust/crates/dcf/src/: lib.rs
engines/rust/crates/ffi/: Cargo.toml
engines/rust/crates/ffi/src/: lib.rs
engines/rust/crates/fiscal/: Cargo.toml
engines/rust/crates/fiscal/src/: lib.rs
engines/rust/crates/graph/: Cargo.toml
engines/rust/crates/graph/src/: lib.rs
engines/rust/crates/monte-carlo/: Cargo.toml
engines/rust/crates/monte-carlo/src/: lib.rs  sampler.rs
engines/rust/crates/portfolio/: Cargo.toml
engines/rust/crates/portfolio/src/: lib.rs  strategy.rs
engines/rust/crates/risk/: Cargo.toml
engines/rust/crates/risk/src/: lib.rs  measure.rs
ml/: .dockerignore  pyproject.toml
ml/src/stratos_ml/: __init__.py  config.py
ml/src/stratos_ml/adapters/: __init__.py
ml/src/stratos_ml/adapters/feature_store/: __init__.py
ml/src/stratos_ml/adapters/registry/: __init__.py
ml/src/stratos_ml/api/: app.py  deps.py  routes.py
ml/src/stratos_ml/application/: __init__.py
ml/src/stratos_ml/domain/entities/: __init__.py
ml/src/stratos_ml/domain/ports/: __init__.py
ml/tests/: test_models.py
nlp/: pyproject.toml
nlp/src/stratos_nlp/: __init__.py  config.py
nlp/src/stratos_nlp/adapters/: __init__.py
nlp/src/stratos_nlp/adapters/embeddings/: sbert.py
nlp/src/stratos_nlp/adapters/extraction/: spacy_ner.py
nlp/src/stratos_nlp/adapters/rag/: memory_store.py
nlp/src/stratos_nlp/adapters/sentiment/: finbert.py
nlp/src/stratos_nlp/api/: app.py  deps.py  routes.py
nlp/src/stratos_nlp/application/: __init__.py
nlp/src/stratos_nlp/domain/entities/: __init__.py
nlp/src/stratos_nlp/domain/ports/: __init__.py
nlp/tests/: test_components.py
orchestrator/: pyproject.toml  pyrefly.toml
orchestrator/.stratos/runtime/: langgraph_checkpoints.sqlite3  langgraph_store.sqlite3  runtime_control.sqlite3
orchestrator/src/stratos_orchestrator/: __init__.py  config.py  logging.py
orchestrator/src/stratos_orchestrator/adapters/llm/: anthropic.py  local.py  nvidia.py  ollama.py  openai.py
orchestrator/src/stratos_orchestrator/adapters/tools/: alpha_vantage_tool.py  base.py  calculator_tool.py  coingecko_tool.py  company_news_tool.py  company_tool.py  decision_context_tool.py  events_tool.py  finnhub_tool.py  fraud_tool.py  geopolitics_tool.py  history_tool.py  industry_tool.py  macro_tool.py  (+17 more)
orchestrator/src/stratos_orchestrator/api/: app.py  decision_routes.py  deps.py  routes.py  signals_routes.py  workspace_routes.py
orchestrator/src/stratos_orchestrator/application/: __init__.py  execute_tool.py  finance_council.py  generate_memo.py  langchain_v3.py  persistence.py  plan_tasks.py  stream_orchestrate.py  v2.py  v4_graph.py  v5_graph.py  v5_runtime.py
orchestrator/src/stratos_orchestrator/prompts/: system.md
orchestrator/tests/: conftest.py
orchestrator/tests/unit/: test_api_routes.py  test_finance_runtime.py  test_finance_scoring.py  test_langchain_v3.py  test_orchestration.py  test_plan_tasks.py  test_policy_adr.py  test_v4_graph.py  test_v5_graph.py
(+150 files in other folders)
