[project]
name = "stratos-ml"
version = "0.1.0"
description = "STRATOS ML/DL Stack — statistical, classical, and deep learning models"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "torch>=2.2",
    "polars>=0.20",
    "numpy>=1.26",
    "scipy>=1.12",
    "structlog>=24.1",
    "mlflow>=2.11",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.8"]
[tool.ruff]
target-version = "py312"
line-length = 100
[tool.mypy]
python_version = "3.12"
strict = true
