[project]
name = "stratos-orchestrator"
version = "0.1.0"
description = "STRATOS Agent Orchestrator — LLM agent with tool-calling and RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "langchain==1.2.12",
    "langgraph==1.1.2",
    "langchain-openai==1.1.11",
    "langchain-anthropic==1.3.5",
    "httpx>=0.27",
    "structlog>=24.1",
    "langchain-community==0.4.1",
    "langchain-ollama==1.0.1",
    "langchain-mcp-adapters==0.2.2",
    "langchain-nvidia-ai-endpoints==1.2.1",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.8"]
[tool.ruff]
target-version = "py312"
line-length = 100
