[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/portfolio",
    "crates/risk",
    "crates/monte-carlo",
    "crates/dcf",
    "crates/fiscal",
    "crates/graph",
    "crates/ffi",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/stratos-ai/stratos"

[workspace.dependencies]
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
nalgebra = "0.33"
ndarray = "0.16"
rand = "0.8"
statrs = "0.17"
pyo3 = { version = "0.23", features = ["extension-module"] }
