[package]
name = "stratos-ffi"
version = "0.1.0"
edition.workspace = true

[lib]
name = "stratos_engines"
crate-type = ["cdylib"]

[dependencies]
stratos-core = { path = "../core" }
stratos-portfolio = { path = "../portfolio" }
stratos-risk = { path = "../risk" }
stratos-monte-carlo = { path = "../monte-carlo" }
stratos-dcf = { path = "../dcf" }
stratos-fiscal = { path = "../fiscal" }
stratos-graph = { path = "../graph" }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
